Fixed top nav bar icons alignment issue: UD 65.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -34,7 +34,7 @@ h4    { color: #363636; font-size: 10px; font-weight: bold; text-transform: uppe
 .breadcrumb > li + li:before { content: none; } 
 .breadcrumb li a { color: #177eb7;}
 
-.action-button { min-height:36px;background-color:#1d1d1d border:none;/* position: fixed;*/ width: 100%; z-index: 999; margin-bottom: 0;}
+.action-button { min-height:36px;background:none !important; padding: 0px 15px !important; border:none;/* position: fixed;*/ width: 100%; z-index: 999; margin-bottom: 0;}
 .action-button > li + li:before { content: none; } 
 .action-button li a { color: #177eb7;}
 
